--- a/index.html
+++ b/index.html
@@ -5,107 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Saptarang Freshers Day Voting</title>
 <style>
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 20px;
+body { font-family: 'Arial', sans-serif; margin: 0; padding: 20px;
   background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
-  background-size: 400% 400%;
-  animation: gradientBG 15s ease infinite;
-}
-@keyframes gradientBG {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-h1 {
-  text-align: center;
-  font-size: 4em;
-  font-weight: bold;
-  background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33ff33, #33ccff, #9933ff);
-  -webkit-background-clip: text;
-  color: transparent;
-  margin-bottom: 40px;
-  animation: rainbow 5s linear infinite;
-}
-@keyframes rainbow {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-h2 {
-  margin-top: 40px;
-  text-align: center;
-  font-size: 2.2em;
-  text-decoration: underline;
-  color: #fff;
-  text-shadow: 1px 1px 5px #000;
-}
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
-.card {
-  padding: 10px;
-  text-align: center;
-  border-radius: 15px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  transition: transform 0.3s, box-shadow 0.3s;
-}
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
-}
-.card img {
-  max-width: 100%;
-  border-radius: 12px;
-  border: 3px solid #fff;
-}
-.vote-btn {
-  margin-top: 10px;
-  padding: 10px 18px;
-  border:none;
-  border-radius:10px;
-  cursor:pointer;
-  font-weight:bold;
-  color:#fff;
-  background: linear-gradient(45deg, #ff6b6b, #feca57, #1dd1a1);
-  background-size: 300% 300%;
-  animation: btnGradient 5s ease infinite;
-  transition: transform 0.2s;
-}
-.vote-btn:hover {
-  transform: scale(1.1);
-}
-@keyframes btnGradient {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-.vote-btn:disabled {
-  background: #888;
-  cursor: not-allowed;
-}
-#resultsModal {
-  display:none;
-  position:fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.9);
-  overflow:auto;
-}
-#resultsContent {
-  background:#fff;
-  color:#000;
-  margin:5% auto;
-  padding:20px;
-  width:90%;
-  max-width:600px;
-  border-radius:12px;
-}
-.close-btn { float:right; cursor:pointer; font-size:20px; }
+  background-size: 400% 400%; animation: gradientBG 15s ease infinite; }
+@keyframes gradientBG {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+h1 {text-align:center;font-size:4em;font-weight:bold;
+  background: linear-gradient(90deg, #ff0000,#ff9900,#ffff00,#33ff33,#33ccff,#9933ff);
+  -webkit-background-clip:text;color:transparent;margin-bottom:40px;
+  animation: rainbow 5s linear infinite;}
+@keyframes rainbow {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+h2 {margin-top:40px;text-align:center;font-size:2.2em;text-decoration:underline;color:#fff;text-shadow:1px 1px 5px #000;}
+.grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:20px;margin-top:20px;}
+.card {padding:10px;text-align:center;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
+.card:hover {transform: translateY(-5px);box-shadow:0 10px 20px rgba(0,0,0,0.5);}
+.card img {max-width:100%;border-radius:12px;border:3px solid #fff;}
+.vote-btn {margin-top:10px;padding:10px 18px;border:none;border-radius:10px;cursor:pointer;font-weight:bold;color:#fff;
+background: linear-gradient(45deg,#ff6b6b,#feca57,#1dd1a1);background-size:300% 300%;animation: btnGradient 5s ease infinite;transition: transform 0.2s;}
+.vote-btn:hover {transform: scale(1.1);}
+@keyframes btnGradient {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+.vote-btn:disabled {background:#888;cursor:not-allowed;}
+#resultsModal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background: rgba(0,0,0,0.9);overflow:auto;}
+#resultsContent {background:#fff;color:#000;margin:5% auto;padding:20px;width:90%;max-width:600px;border-radius:12px;}
+.close-btn {float:right;cursor:pointer;font-size:20px;}
 </style>
 </head>
 <body>
@@ -143,114 +64,81 @@ const females = [
   {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
 ];
 
+// Load votes or initialize
 let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
 let locked = JSON.parse(localStorage.getItem('locked')) || false;
 
+// Render candidate cards
 function renderCards(){
-  const voted = localStorage.getItem('voted') === 'true';
-  
-  const mrContainer = document.getElementById('mrCards');
-  mrContainer.innerHTML = '';
+  const voted = localStorage.getItem('voted')==='true';
+  const mrContainer = document.getElementById('mrCards'); mrContainer.innerHTML='';
   males.forEach((c,i)=>{
-    const card = document.createElement('div'); 
-    card.className = 'card';
-    card.innerHTML = `
-      <img src="${c.img}" alt="${c.name}">
-      <h3>${c.name}</h3>
-      <button class="vote-btn" onclick="vote('males',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+      <button class="vote-btn" onclick="vote('males',${i})" ${locked||voted?'disabled':''}>Vote</button>`;
     mrContainer.appendChild(card);
   });
-
-  const mrsContainer = document.getElementById('mrsCards');
-  mrsContainer.innerHTML = '';
+  const mrsContainer = document.getElementById('mrsCards'); mrsContainer.innerHTML='';
   females.forEach((c,i)=>{
-    const card = document.createElement('div'); 
-    card.className = 'card';
-    card.innerHTML = `
-      <img src="${c.img}" alt="${c.name}">
-      <h3>${c.name}</h3>
-      <button class="vote-btn" onclick="vote('females',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
+    const card=document.createElement('div'); card.className='card';
+    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
+      <button class="vote-btn" onclick="vote('females',${i})" ${locked||voted?'disabled':''}>Vote</button>`;
     mrsContainer.appendChild(card);
   });
 }
 
-function vote(group,i){
-  if(localStorage.getItem('voted')) {
-    alert('You have already voted!');
-    return;
-  }
-  votes[group][i]++;
-  localStorage.setItem('votes', JSON.stringify(votes));
-  localStorage.setItem('voted', 'true');
+// Vote function
+function vote(group,index){
+  if(localStorage.getItem('voted')){ alert('You have already voted!'); return;}
+  votes[group][index]++;
+  localStorage.setItem('votes',JSON.stringify(votes));
+  localStorage.setItem('voted','true');
   alert('Vote submitted!');
   renderCards();
 }
 
+// Admin-only results
 function toggleResults(){
-  const pass = prompt("Enter admin password to view results:");
-  if(pass !== adminPassword){
-    alert("Wrong password!");
-    return;
-  }
-
-  const modal=document.getElementById('resultsModal'); 
-  const list=document.getElementById('resultsList');
-  list.innerHTML='';
-  males.forEach((v,i)=>{
-    const li=document.createElement('li'); 
-    li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; 
-    list.appendChild(li);
-  });
-  females.forEach((v,i)=>{
-    const li=document.createElement('li'); 
-    li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; 
-    list.appendChild(li);
-  });
-  modal.style.display='block';
+  const pass=prompt("Enter admin password to view results:");
+  if(pass!==adminPassword){ alert("Wrong password!"); return;}
+  const list=document.getElementById('resultsList'); list.innerHTML='';
+  males.forEach((m,i)=>{ const li=document.createElement('li'); li.textContent=`${m.name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
+  females.forEach((f,i)=>{ const li=document.createElement('li'); li.textContent=`${f.name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
+  document.getElementById('resultsModal').style.display='block';
 }
 
+// Reset votes
 function resetVotes(){
-  const pass = prompt("Enter admin password to reset votes:");
-  if(pass !== adminPassword){
-    alert("Wrong password!");
-    return;
-  }
-
-  if(confirm('Reset all votes?')){
-    votes = {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-    localStorage.setItem('votes', JSON.stringify(votes));
-    localStorage.removeItem('voted'); // allow everyone to vote again
-    locked = false;
-    localStorage.setItem('locked', JSON.stringify(locked));
-    alert("Votes reset successfully! Everyone can vote again.");
+  const pass=prompt("Enter admin password to reset votes:");
+  if(pass!==adminPassword){ alert("Wrong password!"); return;}
+  if(confirm("Reset all votes?")){
+    votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+    localStorage.setItem('votes',JSON.stringify(votes));
+    localStorage.removeItem('voted');
+    locked=false; localStorage.setItem('locked',JSON.stringify(locked));
+    alert("Votes reset! Everyone can vote again.");
     renderCards();
   }
 }
 
-// Force reset for mobile issues
+// Force reset
 function forceResetVotes(){
-  const pass = prompt("Enter admin password to force reset:");
-  if(pass !== adminPassword){
-    alert("Wrong password!");
-    return;
-  }
-  localStorage.clear(); // clear everything
-  votes = {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-  locked = false;
+  const pass=prompt("Enter admin password to force reset:");
+  if(pass!==adminPassword){ alert("Wrong password!"); return;}
+  localStorage.clear();
+  votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+  locked=false;
   alert("Force reset complete! Everyone can vote again.");
   renderCards();
 }
 
+// Lock/unlock voting
 function toggleLock(){
-  const pass = prompt("Enter admin password to lock/unlock voting:");
-  if(pass !== adminPassword){
-    alert("Wrong password!");
-    return;
-  }
-
-  locked = !locked;
-  localStorage.setItem('locked', JSON.stringify(locked));
-  alert(locked ? "Voting is now LOCKED" : "Voting is now UNLOCKED");
+  const pass=prompt("Enter admin password to lock/unlock voting:");
+  if(pass!==adminPassword){ alert("Wrong password!"); return;}
+  locked=!locked;
+  localStorage.setItem('locked',JSON.stringify(locked));
+  alert(locked?"Voting is now LOCKED":"Voting is now UNLOCKED");
   renderCards();
 }
 
