--- a/index.html
+++ b/index.html
@@ -5,31 +5,51 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Saptarang Freshers Day Voting</title>
 <style>
-body { font-family: 'Arial', sans-serif; margin: 0; padding: 20px;
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0; padding: 20px;
   background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
-  background-size: 400% 400%; animation: gradientBG 15s ease infinite; }
-@keyframes gradientBG {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-h1 {text-align:center;font-size:4em;font-weight:bold;
-  background: linear-gradient(90deg, #ff0000,#ff9900,#ffff00,#33ff33,#33ccff,#9933ff);
-  -webkit-background-clip:text;color:transparent;margin-bottom:40px;
-  animation: rainbow 5s linear infinite;}
-@keyframes rainbow {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-h2 {margin-top:40px;text-align:center;font-size:2.2em;text-decoration:underline;color:#fff;text-shadow:1px 1px 5px #000;}
-.grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:20px;margin-top:20px;}
-.card {padding:10px;text-align:center;border-radius:15px;box-shadow:0 5px 15px rgba(0,0,0,0.3);transition: transform 0.3s, box-shadow 0.3s;}
-.card:hover {transform: translateY(-5px);box-shadow:0 10px 20px rgba(0,0,0,0.5);}
-.card img {max-width:100%;border-radius:12px;border:3px solid #fff;}
-.vote-btn {margin-top:10px;padding:10px 18px;border:none;border-radius:10px;cursor:pointer;font-weight:bold;color:#fff;
-background: linear-gradient(45deg,#ff6b6b,#feca57,#1dd1a1);background-size:300% 300%;animation: btnGradient 5s ease infinite;transition: transform 0.2s;}
-.vote-btn:hover {transform: scale(1.1);}
-@keyframes btnGradient {0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-.vote-btn:disabled {background:#888;cursor:not-allowed;}
-#resultsModal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background: rgba(0,0,0,0.9);overflow:auto;}
-#resultsContent {background:#fff;color:#000;margin:5% auto;padding:20px;width:90%;max-width:600px;border-radius:12px;}
-.close-btn {float:right;cursor:pointer;font-size:20px;}
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+}
+@keyframes gradientBG {
+  0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%}
+}
+h1 {
+  text-align: center; font-size: 4em; font-weight: bold;
+  background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33ff33, #33ccff, #9933ff);
+  -webkit-background-clip: text; color: transparent; margin-bottom: 40px;
+}
+h2 {
+  margin-top: 40px; text-align: center; font-size: 2.2em;
+  text-decoration: underline; color: #fff; text-shadow: 1px 1px 5px #000;
+}
+.grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(180px,1fr)); gap: 20px; margin-top: 20px; }
+.card { padding: 10px; text-align: center; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); transition: transform 0.3s, box-shadow 0.3s; }
+.card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.5); }
+.card img { max-width: 100%; border-radius: 12px; border: 3px solid #fff; }
+.vote-btn {
+  margin-top: 10px; padding: 10px 18px; border:none; border-radius:10px; cursor:pointer;
+  font-weight:bold; color:#fff; background: linear-gradient(45deg, #ff6b6b, #feca57, #1dd1a1);
+  background-size: 300% 300%; transition: transform 0.2s;
+}
+.vote-btn:hover { transform: scale(1.1); }
+.vote-btn:disabled { background: #888; cursor: not-allowed; }
+#resultsModal {
+  display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); overflow:auto;
+}
+#resultsContent {
+  background:#fff; color:#000; margin:5% auto; padding:20px; width:90%; max-width:600px; border-radius:12px;
+}
+.close-btn { float:right; cursor:pointer; font-size:20px; }
 </style>
+
+<!-- Firebase Scripts -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
+
 <h1>Saptarang</h1>
 
 <h2>Mr. Fresher</h2>
@@ -44,111 +64,113 @@ background: linear-gradient(45deg,#ff6b6b,#feca57,#1dd1a1);background-size:300% 
     <h2>Voting Results</h2>
     <ul id="resultsList"></ul>
     <button onclick="resetVotes()">Reset Votes</button>
-    <button onclick="forceResetVotes()">Force Reset Votes</button>
   </div>
 </div>
 
 <script>
-const adminPassword = "saptarang123";
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBXThfhzRw6q_BOPcZV5pAhFdJ5n5Xa-0U",
+  authDomain: "voting-sdc-8b9ba.firebaseapp.com",
+  projectId: "voting-sdc-8b9ba",
+  storageBucket: "voting-sdc-8b9ba.firebasestorage.app",
+  messagingSenderId: "487930379975",
+  appId: "1:487930379975:web:cbf54bbe6ec21ea4dd48e2",
+  databaseURL: "https://voting-sdc-8b9ba-default-rtdb.firebaseio.com"
+};
 
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+
+// Candidates
 const males = [
-  {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
-  {name:"Ram Charan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"},
-  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
-  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
+  {name:"Prabhas", img:"images/prabhas.jpg"},
+  {name:"Ram Charan", img:"images/ramcharan.jpg"},
+  {name:"Chiranjeevi", img:"images/chiranjeevi.jpg"},
+  {name:"Appu", img:"images/appu.jpg"}
 ];
 const females = [
-  {name:"Sai Pallavi", img:"HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg"},
-  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"},
-  {name:"Sreelela", img:"Sreeleela-m-1.jpg"},
-  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
+  {name:"Sai Pallavi", img:"images/saipallavi.jpg"},
+  {name:"Kajal", img:"images/kajal.jpg"},
+  {name:"Sreelela", img:"images/sreelela.jpg"},
+  {name:"Samantha", img:"images/samantha.jpg"}
 ];
 
-// Load votes or initialize
-let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-let locked = JSON.parse(localStorage.getItem('locked')) || false;
-
-// Render candidate cards
-function renderCards(){
-  const voted = localStorage.getItem('voted')==='true';
-  const mrContainer = document.getElementById('mrCards'); mrContainer.innerHTML='';
+// Render cards
+function renderCards(voted=false){
+  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
   males.forEach((c,i)=>{
     const card=document.createElement('div'); card.className='card';
     card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-      <button class="vote-btn" onclick="vote('males',${i})" ${locked||voted?'disabled':''}>Vote</button>`;
+    <button class="vote-btn" onclick="vote('males',${i})" ${voted?'disabled':''}>Vote</button>`;
     mrContainer.appendChild(card);
   });
-  const mrsContainer = document.getElementById('mrsCards'); mrsContainer.innerHTML='';
+
+  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
   females.forEach((c,i)=>{
     const card=document.createElement('div'); card.className='card';
     card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-      <button class="vote-btn" onclick="vote('females',${i})" ${locked||voted?'disabled':''}>Vote</button>`;
+    <button class="vote-btn" onclick="vote('females',${i})" ${voted?'disabled':''}>Vote</button>`;
     mrsContainer.appendChild(card);
   });
 }
 
 // Vote function
 function vote(group,index){
-  if(localStorage.getItem('voted')){ alert('You have already voted!'); return;}
-  votes[group][index]++;
-  localStorage.setItem('votes',JSON.stringify(votes));
-  localStorage.setItem('voted','true');
-  alert('Vote submitted!');
-  renderCards();
+  const userId = prompt("Enter your unique ID:"); // simple user identifier
+  if(!userId) return;
+
+  const userRef = db.ref('users/'+userId);
+  userRef.get().then(snapshot=>{
+    if(snapshot.exists()){ alert('You have already voted!'); return; }
+
+    const voteRef = db.ref('votes/counters/'+group+'/'+index);
+    voteRef.transaction(current => (current||0)+1);
+
+    userRef.set({group,index}); // mark user as voted
+    alert('Vote submitted!');
+    renderCards(true);
+  });
 }
 
-// Admin-only results
+// Admin password prompt to view results
 function toggleResults(){
-  const pass=prompt("Enter admin password to view results:");
-  if(pass!==adminPassword){ alert("Wrong password!"); return;}
+  const pass = prompt('Enter admin password:');
+  if(pass!=='saptarang123'){ alert('Wrong password!'); return; }
+
+  const modal=document.getElementById('resultsModal'); 
   const list=document.getElementById('resultsList'); list.innerHTML='';
-  males.forEach((m,i)=>{ const li=document.createElement('li'); li.textContent=`${m.name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
-  females.forEach((f,i)=>{ const li=document.createElement('li'); li.textContent=`${f.name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
-  document.getElementById('resultsModal').style.display='block';
+
+  db.ref('votes/counters/males').get().then(mSnap=>{
+    mSnap.forEach((v,i)=>{ list.innerHTML+=`<li>${males[i].name} (Mr.): ${v.val()} votes</li>`; });
+  });
+
+  db.ref('votes/counters/females').get().then(fSnap=>{
+    fSnap.forEach((v,i)=>{ list.innerHTML+=`<li>${females[i].name} (Mrs.): ${v.val()} votes</li>`; });
+  });
+
+  modal.style.display='block';
 }
 
-// Reset votes
+// Reset votes (admin only)
 function resetVotes(){
-  const pass=prompt("Enter admin password to reset votes:");
-  if(pass!==adminPassword){ alert("Wrong password!"); return;}
-  if(confirm("Reset all votes?")){
-    votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-    localStorage.setItem('votes',JSON.stringify(votes));
-    localStorage.removeItem('voted'); // allow all users to vote again
-    locked=false; localStorage.setItem('locked',JSON.stringify(locked));
-    alert("Votes reset! Everyone can vote again.");
-    renderCards();
+  const pass = prompt('Enter admin password:');
+  if(pass!=='saptarang123'){ alert('Wrong password!'); return; }
+
+  db.ref('votes').set({counters:{males:[0,0,0,0], females:[0,0,0,0]}, users:{}});
+  alert('Votes reset successfully!');
+  renderCards(false);
+  toggleResults();
+}
+
+// Initialize votes in DB if not exists
+db.ref('votes').get().then(snapshot=>{
+  if(!snapshot.exists()){
+    db.ref('votes').set({counters:{males:[0,0,0,0], females:[0,0,0,0]}, users:{}});
   }
-}
-
-// Force reset
-function forceResetVotes(){
-  const pass=prompt("Enter admin password to force reset:");
-  if(pass!==adminPassword){ alert("Wrong password!"); return;}
-  localStorage.clear();
-  votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-  locked=false;
-  alert("Force reset complete! Everyone can vote again.");
-  renderCards();
-}
-
-// Lock/unlock voting
-function toggleLock(){
-  const pass=prompt("Enter admin password to lock/unlock voting:");
-  if(pass!==adminPassword){ alert("Wrong password!"); return;}
-  locked=!locked;
-  localStorage.setItem('locked',JSON.stringify(locked));
-  alert(locked?"Voting is now LOCKED":"Voting is now UNLOCKED");
-  renderCards();
-}
-
-document.addEventListener('keydown',(e)=>{
-  if(e.key==='R'||e.key==='r') toggleResults();
-  if(e.ctrlKey && e.altKey && e.key==='r') resetVotes();
-  if(e.key==='L'||e.key==='l') toggleLock();
+  renderCards(false);
 });
-
-renderCards();
 </script>
 </body>
 </html>
