--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ const db = firebase.database();
 
 // Candidates
 const males = [
-  {name:"Prabhas", img:"images/prabhas.jpg"},
-  {name:"Ram Charan", img:"images/ramcharan.jpg"},
-  {name:"Chiranjeevi", img:"images/chiranjeevi.jpg"},
-  {name:"Appu", img:"images/appu.jpg"}
+  {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
+  {name:"Ram Charan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"},
+  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
+  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
 ];
 const females = [
   {name:"Sai Pallavi", img:"images/saipallavi.jpg"},
