--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ const males = [
   {name:"Prabhas", img:"https://i.imgur.com/7q5wCAd.jpg"},
   {name:"Ram Charan", img:"https://i.imgur.com/twW0Qpu.jpg"},
   {name:"Chiranjeevi", img:"https://i.imgur.com/3jUXzXZ.jpg"},
-  {name:"Appu", img:"https://i.imgur.com/9Vx0DqI.jpg"}
+  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
 ];
 const females = [
   {name:"Sai Pallavi", img:"https://i.imgur.com/Df2tr9h.jpg"},
