--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ const females = [
   {name:"Sai Pallavi", img:"https://i.imgur.com/Df2tr9h.jpg"},
   {name:"Kajal", img:"https://i.imgur.com/ovx30Zl.jpg"},
   {name:"Sreelela", img:"https://i.imgur.com/y6wX8qS.jpg"},
-  {name:"Samantha", img:"https://i.imgur.com/B7tZd4F.jpg"}
+  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
 ];
 
 // Render cards
