--- a/index.html
+++ b/index.html
@@ -1,176 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Saptarang Freshers Day Voting</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Freshers Day Voting</title>
 <style>
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0; padding: 20px;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1, #fbc2eb);
-  background-size: 400% 400%;
-  animation: gradientBG 15s ease infinite;
-}
-@keyframes gradientBG {
-  0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%}
-}
-h1 {
-  text-align: center; font-size: 4em; font-weight: bold;
-  background: linear-gradient(90deg, #ff0000, #ff9900, #ffff00, #33ff33, #33ccff, #9933ff);
-  -webkit-background-clip: text; color: transparent; margin-bottom: 40px;
-}
-h2 {
-  margin-top: 40px; text-align: center; font-size: 2.2em;
-  text-decoration: underline; color: #fff; text-shadow: 1px 1px 5px #000;
-}
-.grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(180px,1fr)); gap: 20px; margin-top: 20px; }
-.card { padding: 10px; text-align: center; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); transition: transform 0.3s, box-shadow 0.3s; }
-.card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.5); }
-.card img { max-width: 100%; border-radius: 12px; border: 3px solid #fff; }
-.vote-btn {
-  margin-top: 10px; padding: 10px 18px; border:none; border-radius:10px; cursor:pointer;
-  font-weight:bold; color:#fff; background: linear-gradient(45deg, #ff6b6b, #feca57, #1dd1a1);
-  background-size: 300% 300%; transition: transform 0.2s;
-}
-.vote-btn:hover { transform: scale(1.1); }
-.vote-btn:disabled { background: #888; cursor: not-allowed; }
-#resultsModal {
-  display:none; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); overflow:auto;
-}
-#resultsContent {
-  background:#fff; color:#000; margin:5% auto; padding:20px; width:90%; max-width:600px; border-radius:12px;
-}
-.close-btn { float:right; cursor:pointer; font-size:20px; }
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f8fa;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+  }
+  h1 {
+    color: #333;
+  }
+  .candidate-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
+  }
+  .candidate {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    width: 180px;
+    padding: 15px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+  }
+  .candidate:hover {
+    transform: translateY(-6px);
+  }
+  .candidate img {
+    max-width: 100%;
+    border-radius: 8px;
+  }
+  .name {
+    font-weight: bold;
+    margin: 12px 0 8px 0;
+    color: #222;
+  }
+  .votes {
+    color: #555;
+  }
+  button.vote-btn {
+    margin-top: 10px;
+    cursor: pointer;
+    background-color: #007bff;
+    border: none;
+    padding: 8px 14px;
+    color: white;
+    font-weight: 600;
+    border-radius: 4px;
+  }
+  button.vote-btn:focus {
+    outline: none;
+  }
 </style>
-
-<!-- Firebase Scripts -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
 
-<h1>Saptarang</h1>
+<h1>Vote for Freshers Day</h1>
 
-<h2>Mr. Fresher</h2>
-<div class="grid" id="mrCards"></div>
-
-<h2>Mrs. Fresher</h2>
-<div class="grid" id="mrsCards"></div>
-
-<div id="resultsModal">
-  <div id="resultsContent">
-    <span class="close-btn" onclick="toggleResults()">&times;</span>
-    <h2>Voting Results</h2>
-    <ul id="resultsList"></ul>
-    <button onclick="resetVotes()">Reset Votes</button>
-  </div>
+<div class="candidate-container" id="candidates">
+  <!-- Candidates will be injected here -->
 </div>
 
 <script>
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyBXThfhzRw6q_BOPcZV5pAhFdJ5n5Xa-0U",
-  authDomain: "voting-sdc-8b9ba.firebaseapp.com",
-  projectId: "voting-sdc-8b9ba",
-  storageBucket: "voting-sdc-8b9ba.firebasestorage.app",
-  messagingSenderId: "487930379975",
-  appId: "1:487930379975:web:cbf54bbe6ec21ea4dd48e2",
-  databaseURL: "https://voting-sdc-8b9ba-default-rtdb.firebaseio.com"
-};
+  // Candidates data
+  const candidates = [
+    { name: 'Samantha', image: 'samantha-ruth-prabhu-stills-photos-pictures-2008.jpg', votes: 0 },
+    { name: 'Prabhas', image: 'prabhas_latest_photos_2807170354_03.jpg', votes: 0 },
+    { name: 'Kajal', image: 'a4c87cf5b9871dd67ebc6df0627d000a.jpg', votes: 0 },
+    { name: 'Sreelela', image: 'Sreeleela-m-1.jpg', votes: 0 },
+    { name: 'Sai Pallavi', image: 'HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg', votes: 0 },
+    { name: 'Chiranjeevi', image: '517EDEYjsHL.jpg', votes: 0 },
+    { name: 'Ram Charan', image: 'MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@.V1_FMjpg_UX1000.jpg', votes: 0 },
+    { name: 'Appu', image: '4b66c7797edf566ce33faf716aff65f6.jpg', votes: 0 }
+  ];
 
-// Initialize Firebase
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
+  const container = document.getElementById('candidates');
 
-// Candidates with online image URLs
-const males = [
-  {name:"Prabhas", img:"https://i.imgur.com/7q5wCAd.jpg"},
-  {name:"Ram Charan", img:"https://i.imgur.com/twW0Qpu.jpg"},
-  {name:"Chiranjeevi", img:"https://i.imgur.com/3jUXzXZ.jpg"},
-  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
-];
-const females = [
-  {name:"Sai Pallavi", img:"https://i.imgur.com/Df2tr9h.jpg"},
-  {name:"Kajal", img:"https://i.imgur.com/ovx30Zl.jpg"},
-  {name:"Sreelela", img:"https://i.imgur.com/y6wX8qS.jpg"},
-  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
-];
-
-// Render cards
-function renderCards(voted=false){
-  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
-  males.forEach((c,i)=>{
-    const card=document.createElement('div'); card.className='card';
-    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-    <button class="vote-btn" onclick="vote('males',${i})" ${voted?'disabled':''}>Vote</button>`;
-    mrContainer.appendChild(card);
-  });
-
-  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
-  females.forEach((c,i)=>{
-    const card=document.createElement('div'); card.className='card';
-    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-    <button class="vote-btn" onclick="vote('females',${i})" ${voted?'disabled':''}>Vote</button>`;
-    mrsContainer.appendChild(card);
-  });
-}
-
-// Vote function
-function vote(group,index){
-  const userId = prompt("Enter your unique ID:"); // simple user identifier
-  if(!userId) return;
-
-  const userRef = db.ref('users/'+userId);
-  userRef.get().then(snapshot=>{
-    if(snapshot.exists()){ alert('You have already voted!'); return; }
-
-    const voteRef = db.ref('votes/counters/'+group+'/'+index);
-    voteRef.transaction(current => (current||0)+1);
-
-    userRef.set({group,index}); // mark user as voted
-    alert('Vote submitted!');
-    renderCards(true);
-  });
-}
-
-// Admin password prompt to view results
-function toggleResults(){
-  const pass = prompt('Enter admin password:');
-  if(pass!=='saptarang123'){ alert('Wrong password!'); return; }
-
-  const modal=document.getElementById('resultsModal'); 
-  const list=document.getElementById('resultsList'); list.innerHTML='';
-
-  db.ref('votes/counters/males').get().then(mSnap=>{
-    mSnap.forEach((v,i)=>{ list.innerHTML+=`<li>${males[i].name} (Mr.): ${v.val()} votes</li>`; });
-  });
-
-  db.ref('votes/counters/females').get().then(fSnap=>{
-    fSnap.forEach((v,i)=>{ list.innerHTML+=`<li>${females[i].name} (Mrs.): ${v.val()} votes</li>`; });
-  });
-
-  modal.style.display='block';
-}
-
-// Reset votes (admin only)
-function resetVotes(){
-  const pass = prompt('Enter admin password:');
-  if(pass!=='saptarang123'){ alert('Wrong password!'); return; }
-
-  db.ref('votes').set({counters:{males:[0,0,0,0], females:[0,0,0,0]}, users:{}});
-  alert('Votes reset successfully!');
-  renderCards(false);
-  toggleResults();
-}
-
-// Initialize votes in DB if not exists
-db.ref('votes').get().then(snapshot=>{
-  if(!snapshot.exists()){
-    db.ref('votes').set({counters:{males:[0,0,0,0], females:[0,0,0,0]}, users:{}});
+  function renderCandidates() {
+    container.innerHTML = '';
+    candidates.forEach((candidate, index) => {
+      const candidateDiv = document.createElement('div');
+      candidateDiv.classList.add('candidate');
+      candidateDiv.innerHTML = `
+        <img src="${candidate.image}" alt="${candidate.name}" />
+        <div class="name">${candidate.name}</div>
+        <div class="votes">Votes: <span id="votes-${index}">${candidate.votes}</span></div>
+        <button class="vote-btn" onclick="vote(${index})">Vote</button>
+      `;
+      container.appendChild(candidateDiv);
+    });
   }
-  renderCards(false);
-});
+
+  function vote(index) {
+    candidates[index].votes++;
+    document.getElementById(`votes-${index}`).textContent = candidates[index].votes;
+    alert(`You voted for ${candidates[index].name}`);
+  }
+
+  renderCandidates();
 </script>
+
 </body>
 </html>
