--- a/index.html
+++ b/index.html
@@ -127,75 +127,122 @@ h2 {
 </div>
 
 <script>
+const adminPassword = "saptarang123";
+
 const males = [
   {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
-  {name:"Appu", img:"517EDEYjsHL.jpg"},
-  {name:"Chiranjeevi", img:"https://via.placeholder.com/200x250?text=Vikram"},
-  {name:"Ramcharan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"}
+  {name:"Ram Charan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"},
+  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
+  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
 ];
 const females = [
-  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"},
   {name:"Sai Pallavi", img:"HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg"},
+  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"},
   {name:"Sreelela", img:"Sreeleela-m-1.jpg"},
-  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"}
+  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
 ];
 
 let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-let votedDevices = JSON.parse(localStorage.getItem('votedDevices')) || [];
+let locked = JSON.parse(localStorage.getItem('locked')) || false;
 
 function renderCards(){
-  const mrContainer=document.getElementById('mrCards'); mrContainer.innerHTML='';
+  const voted = localStorage.getItem('voted') === 'true';
+  
+  const mrContainer = document.getElementById('mrCards');
+  mrContainer.innerHTML = '';
   males.forEach((c,i)=>{
-    const card=document.createElement('div'); card.className='card';
-    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-    <button class="vote-btn" onclick="vote('males',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    const card = document.createElement('div'); 
+    card.className = 'card';
+    card.innerHTML = `
+      <img src="${c.img}" alt="${c.name}">
+      <h3>${c.name}</h3>
+      <button class="vote-btn" onclick="vote('males',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
     mrContainer.appendChild(card);
   });
 
-  const mrsContainer=document.getElementById('mrsCards'); mrsContainer.innerHTML='';
+  const mrsContainer = document.getElementById('mrsCards');
+  mrsContainer.innerHTML = '';
   females.forEach((c,i)=>{
-    const card=document.createElement('div'); card.className='card';
-    card.innerHTML=`<img src="${c.img}" alt="${c.name}"><h3>${c.name}</h3>
-    <button class="vote-btn" onclick="vote('females',${i})" ${votedDevices.includes('males') || votedDevices.includes('females')?'disabled':''}>Vote</button>`;
+    const card = document.createElement('div'); 
+    card.className = 'card';
+    card.innerHTML = `
+      <img src="${c.img}" alt="${c.name}">
+      <h3>${c.name}</h3>
+      <button class="vote-btn" onclick="vote('females',${i})" ${locked || voted ? 'disabled' : ''}>Vote</button>`;
     mrsContainer.appendChild(card);
   });
 }
 
 function vote(group,i){
-  if(!votedDevices.includes(group)){
-    votes[group][i]++;
-    votedDevices.push('males'); votedDevices.push('females'); // prevent multiple votes
-    localStorage.setItem('votes',JSON.stringify(votes));
-    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
-    alert('Vote submitted!');
-    renderCards();
-  } else { alert('You have already voted!'); }
+  if(localStorage.getItem('voted')) {
+    alert('You have already voted!');
+    return;
+  }
+  votes[group][i]++;
+  localStorage.setItem('votes', JSON.stringify(votes));
+  localStorage.setItem('voted', 'true');
+  alert('Vote submitted!');
+  renderCards();
 }
 
 function toggleResults(){
-  const modal=document.getElementById('resultsModal'); const list=document.getElementById('resultsList');
-  if(modal.style.display==='block'){ modal.style.display='none'; }
-  else{
-    list.innerHTML='';
-    males.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; list.appendChild(li);});
-    females.forEach((v,i)=>{const li=document.createElement('li'); li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; list.appendChild(li);});
-    modal.style.display='block';
+  const pass = prompt("Enter admin password to view results:");
+  if(pass !== adminPassword){
+    alert("Wrong password!");
+    return;
   }
+
+  const modal=document.getElementById('resultsModal'); 
+  const list=document.getElementById('resultsList');
+  list.innerHTML='';
+  males.forEach((v,i)=>{
+    const li=document.createElement('li'); 
+    li.textContent=`${males[i].name} (Mr.): ${votes.males[i]} votes`; 
+    list.appendChild(li);
+  });
+  females.forEach((v,i)=>{
+    const li=document.createElement('li'); 
+    li.textContent=`${females[i].name} (Mrs.): ${votes.females[i]} votes`; 
+    list.appendChild(li);
+  });
+  modal.style.display='block';
 }
 
 function resetVotes(){
-  if(confirm('Reset all votes?')){
-    votes={males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
-    votedDevices=[];
-    localStorage.setItem('votes',JSON.stringify(votes));
-    localStorage.setItem('votedDevices',JSON.stringify(votedDevices));
-    renderCards(); toggleResults();
+  const pass = prompt("Enter admin password to reset votes:");
+  if(pass !== adminPassword){
+    alert("Wrong password!");
+    return;
   }
+
+  if(confirm('Reset all votes?')){
+    votes = {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
+    localStorage.setItem('votes', JSON.stringify(votes));
+    localStorage.removeItem('voted'); // allow everyone to vote again
+    locked = false;
+    localStorage.setItem('locked', JSON.stringify(locked));
+    alert("Votes reset successfully! Everyone can vote again.");
+    renderCards();
+  }
+}
+
+function toggleLock(){
+  const pass = prompt("Enter admin password to lock/unlock voting:");
+  if(pass !== adminPassword){
+    alert("Wrong password!");
+    return;
+  }
+
+  locked = !locked;
+  localStorage.setItem('locked', JSON.stringify(locked));
+  alert(locked ? "Voting is now LOCKED" : "Voting is now UNLOCKED");
+  renderCards();
 }
 
 document.addEventListener('keydown',(e)=>{
   if(e.key==='R'||e.key==='r') toggleResults();
-  if(e.key==='L'||e.key==='l') resetVotes();
+  if(e.ctrlKey && e.altKey && e.key==='r') resetVotes();
+  if(e.key==='L'||e.key==='l') toggleLock();
 });
 
 renderCards();
