--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@ const adminPassword = "saptarang123";
 
 const males = [
   {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
-  {name:"Ram Charan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"},
-  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
-  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"}
+  {name:"Appu", img:"517EDEYjsHL.jpg"},
+  {name:"Chiranjeevi", img:"https://via.placeholder.com/200x250?text=Vikram"},
+  {name:"Ramcharan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"}
 ];
 const females = [
+  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"},
   {name:"Sai Pallavi", img:"HD-wallpaper-sai-pallavi-fidaa-love-story-naga-chaitanya-sai-pallavi-shekhar-kammula-tollywood.jpg"},
-  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"},
   {name:"Sreelela", img:"Sreeleela-m-1.jpg"},
-  {name:"Samantha", img:"samantha-ruth-prabhu-stills-photos-pictures-2008.jpg"}
+  {name:"Kajal", img:"a4c87cf5b9871dd67ebc6df0627d000a.jpg"}
 ];
 
 let votes = JSON.parse(localStorage.getItem('votes')) || {males:Array(males.length).fill(0), females:Array(females.length).fill(0)};
