--- a/index.html
+++ b/index.html
@@ -125,7 +125,30 @@ h2 {
     <button onclick="resetVotes()">Reset Votes</button>
   </div>
 </div>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyASRaI1yNulEOcUlhtiA2S1Phf4P8TfYMk",
+    authDomain: "voting-sdc.firebaseapp.com",
+    databaseURL: "https://voting-sdc-default-rtdb.firebaseio.com",
+    projectId: "voting-sdc",
+    storageBucket: "voting-sdc.firebasestorage.app",
+    messagingSenderId: "28360274587",
+    appId: "1:28360274587:web:4919d667621e3480038c3e",
+    measurementId: "G-GZYTTT6QHJ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 <script>
 const adminPassword = "saptarang123";
 
