--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ const adminPassword = "saptarang123";
 
 const males = [
   {name:"Prabhas", img:"prabhas_latest_photos_2807170354_03.jpg"},
-  {name:"Appu", img:"517EDEYjsHL.jpg"},
-  {name:"Chiranjeevi", img:"https://via.placeholder.com/200x250?text=Vikram"},
+  {name:"Chiranjeevi", img:"517EDEYjsHL.jpg"},
+  {name:"Appu", img:"4b66c7797edf566ce33faf716aff65f6.jpg"},
   {name:"Ramcharan", img:"MV5BZWY1NTQyMWItMWU2OS00NWMwLWFlN2MtMDZlYzEwZmU3MTYzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"}
 ];
 const females = [
