--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@ h2 {
   </div>
 </div>
 <script type="module">
-  // Import Firebase
+  // Import Firebase modules
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getDatabase, ref, get, set, update, onValue } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+  import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
-  // Firebase config
+  // Your Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyASRaI1yNulEOcUlhtiA2S1Phf4P8TfYMk",
     authDomain: "voting-sdc.firebaseapp.com",
@@ -142,7 +142,7 @@ h2 {
     measurementId: "G-GZYTTT6QHJ"
   };
 
-  // Init Firebase
+  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
 
@@ -217,17 +217,21 @@ h2 {
     const list = document.getElementById('resultsList');
     list.innerHTML = '';
 
+    // Get males results
     const malesSnap = await get(ref(db,"votes/males"));
     males.forEach((c,i)=>{
       const li = document.createElement("li");
-      li.textContent = `${c.name} (Mr.): ${(malesSnap.exists() && malesSnap.val()[i]) || 0} votes`;
+      const count = (malesSnap.exists() && malesSnap.val()[i]) || 0;
+      li.textContent = `${c.name} (Mr.): ${count} votes`;
       list.appendChild(li);
     });
 
+    // Get females results
     const femalesSnap = await get(ref(db,"votes/females"));
     females.forEach((c,i)=>{
       const li = document.createElement("li");
-      li.textContent = `${c.name} (Mrs.): ${(femalesSnap.exists() && femalesSnap.val()[i]) || 0} votes`;
+      const count = (femalesSnap.exists() && femalesSnap.val()[i]) || 0;
+      li.textContent = `${c.name} (Mrs.): ${count} votes`;
       list.appendChild(li);
     });
 
